2013-10-28  Simon Fraser  <simon.fraser@apple.com>

        Remove underlines on the bot names in the header.
        
        * BuildSlaveSupport/build.webkit.org-config/public_html/default.css:
        (td.LastBuild a):

2013-10-28  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Add EFL release bots to the buildbot dashboard
        https://bugs.webkit.org/show_bug.cgi?id=123430

        Reviewed by Darin Adler.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Images/EFL.png: Added.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
        (WebKitBuildbot): add 64 bits release wk2 and wk1 testers and 32 bits release builder.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Styles/Main.css:
        (table.queue-grid tr.platform.linux-efl img.logo): use the EFL logo in its dashboard line.

2013-10-28  Simon Fraser  <simon.fraser@apple.com>

        More waterfall tweaking.

        * BuildSlaveSupport/build.webkit.org-config/public_html/default.css:
        (body > .header):
        (td.LastBuild):
        (td.LastBuild a):
        (td.LastBuild,td.Activity a,td.Change a,td.Builder a):

2013-10-28  Simon Fraser  <simon.fraser@apple.com>

        More waterfall tweaking.

        * BuildSlaveSupport/build.webkit.org-config/public_html/default.css:
        (body.interface):
        (body > hr):
        (div.content h1):
        (body > .header):
        (td.Activity a,td.Change a,td.Builder a):
        (td.Builder):

2013-10-28  Simon Fraser  <simon.fraser@apple.com>

        Apply changes to default.css, revert buildbot.css which seems to be unused.

        * BuildSlaveSupport/build.webkit.org-config/public_html/buildbot.css:
        (body):
        (body, td):
        (a:link,a:visited,a:active):
        (td.Time):
        (td.Activity):
        (.exception, td.offline):
        * BuildSlaveSupport/build.webkit.org-config/public_html/default.css: